Wired up stats to the backend. I setup controllers for basic State and Country Stats: http://localhost:8080/countrystats?country=France http://localhost:8080/statestats?state=Idaho

--- a/finalProject_frontend/src/main/resources/application.properties
+++ b/finalProject_frontend/src/main/resources/application.properties
@@ -2,7 +2,10 @@
 # hibernate 
 spring.datasource.url = jdbc:mysql://localhost:3306/world
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = password
+
+
+covidstats.url = "http://localhost:8070"
 #
 # Covid-19 Statistics API
 covid.url = https://covid-193.p.rapidapi.com/statistics
