--- a/finalProject_frontend/src/main/resources/application.properties
+++ b/finalProject_frontend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # hibernate 
 spring.datasource.url = jdbc:mysql://localhost:3306/world
 spring.datasource.username = root
-spring.datasource.password = password
+spring.datasource.password = root
 
 
 covidstats.url = "http://localhost:8070"
